--- a/examples/alan-example-integration-kotlin/app/src/main/res/layout/activity_main.xml
+++ b/examples/alan-example-integration-kotlin/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,13 @@
     android:layout_height="match_parent"
     tools:context="app.alan.exampleintegrationkotlin.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello Alan!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph="@navigation/main_nav"
+        app:defaultNavHost="true" />
 
     <com.alan.alansdk.button.AlanButton
         app:layout_constraintBottom_toBottomOf="parent"
